--- a/chute/index.html
+++ b/chute/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Network Test Results</h1>
-    <object data="results.txt" type="text/plain" width="100%" height="100%"></object>
+    <object data="results.txt" type="text/plain" width="100%" height="1000"></object>
   </body>
 </html>
